# immo-eliza-deployment

./: 0_Predict.py  README.md  pyproject.toml  requirements.txt  streamlit_app.py
models/: y_pred.joblib  y_test.joblib
pages/: 1_🔎_Explore_Data.py
