[tool.poetry]
name = "immo-eliza-deployment"
version = "0.1.0"
description = ""
authors = ["Kelli Griffin <kelligriffin49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.0"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
